<resources>
    <string name="app_name">Chicout Life</string>
    <!-- FireBase -->
    <string name="email_id">adresse email</string>
    <string name="password">password</string>
    <string name="login">Se connecter</string>
    <string name="deconnecter">Se déconnecter</string>
    <string name="failed">Authentication incorrecte</string>
    <string name="create_a_new_account">Créer un compte!</string>
    <string name="facebook_app_id">315866035682558</string>
    <string name="fb_login_protocol_scheme">fb315866035682558</string>
    <string name="firebase_error_login">Firebase Login Error</string>
    <string name="chooser_title">Selectionner mail</string>


    <!-- TO DO LIST -->
    <string name="qcourse">Faire les courses</string>
    <string name="qappart">Trouver un appartement</string>
    <string name="qhiver">Avoir des vêtements d\'hiver</string>
    <string name="qinscription">S\'inscrire à l\'UQAC</string>
    <string name="qasso">Trouver son association étudiante</string>
    <string name="qcarteetu">Faire sa carte étudiante</string>
    <string name="qcartebus">Faire sa carte de bus</string>
    <string name="qcasier">Prendre un casier</string>
    <string name="qramq">Obtenir la RAMQ</string>
    <string name="qbancaire">Ouvrir un compte bancaire</string>
    <string name="qnas">Faire son NAS</string>
    <string name="qattest">Faire signer son attestation d\'arriver</string>
    <string name="qbilletavion">Acheter ses billets d\'avions</string>
    <string name="qitineraire">Trouver un itinéraire de votre ville d\'arrivé à Chicoutimi</string>
    <string name="qpermisetude">Faire son permis d\'étude</string>
    <string name="qcaq">Faire son CAQ</string>
    <string name="qaccueilp">S\'inscrire au programme Accueil +</string>
    <string name="qave">Faire son AVE (Visa Touristique)</string>
    <string name="fait">Fait :</string>
    <string name="a_faire">A faire :</string>
    <string name="informations_utiles">Informations utiles</string>
    <string name="adresses_utiles">Adresses utiles</string>
    <string name="commentaires">Commentaires</string>
    <string name="annonces">Annonces</string>
    <string name="annonce">Annonce</string>
    <string name="contacter_vendeur">Contacter le vendeur</string>
    <string name="param_recherche">Paramètres recherche</string>

    <!-- Annonces -->
    <string name="publier_annonce">Publier une nouvelle annonce</string>
    <string name="titre">Titre de votre annonce*</string>
    <string name="description">Description de votre annonce*</string>
    <string name="prix">Prix de votre article*</string>
    <string name="photo">Prendre une photo de votre annonce*</string>
    <string name="categorie">Choisir la catégorie dans laquelle vous voulez que votre article apparaisse*</string>
    <string name="publierAnnonce">Publier mon annonce</string>
    <string name="photo_vide">image_vide.jpg</string>

    <!-- Tags -->
    <string name="electronique">Electronique</string>
    <string name="vetements">Vêtements</string>
    <string name="nourriture">Nourriture</string>
    <string name="appartements">Appartements</string>
    <string name="rechercher">Rechercher</string>
    <string name="appartement">Appartement</string>
    <string name="vetement">Vetements</string>
    <string name="acceder_aux_annonces">Accéder aux Annonces</string>
    <string name="acc_der_la_to_do_list">Accéder à la TO DO LIST</string>
    <string name="editer_mes_renseignements">Editer mes renseignements</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="titreRenseignementArrivee">Renseignements pour votre arrivée</string>
    <string name="QuestionPays">De quel pays venez vous ?</string>
    <string name="QuestionDomaine">Quel est votre domaine d\'étude ?</string>
    <string name="QuestionProgramme">Quel est votre programme d\'étude ?</string>
    <string name="QuestionTrimestre">Quel est votre trimestre d\'admission ?</string>
    <string name="automne">Automne</string>
    <string name="hiver">Hiver</string>
    <string name="ete">Été</string>
    <string name="NombreSessions">Combien de session restez-vous ?</string>
    <string name="QuestionPermisEtude">Avez-vous un Permis d\'étude ?</string>
    <string name="QuestionEchange">Faites vous partie d\'un échange universitaire ?</string>
    <string name="QuestionPresenceChicout">Êtes-vous déjà à Chicoutimi ?</string>
    <string name="QuestionTravail">Souhaitez vous travailler pendant votre séjour ?</string>
    <string name="to_do_list">TO DO List</string>

    <!-- Pays -->
    <string-array name="country_arrays">
        <!-- PAYS PARTENAIRE -->
        <item>Algérie</item>
        <item>Allemagne</item>
        <item>Argentine</item>
        <item>Belgique</item>
        <item>Bolovie</item>
        <item>Brésil</item>
        <item>Canada</item>
        <item>Chili</item>
        <item>Chine</item>
        <item>Colombie</item>
        <item>Côte d\'Ivoire</item>
        <item>Cuba</item>
        <item>Espagne</item>
        <item>Etats-Unis</item>
        <item>Finlande</item>
        <item>France</item>
        <item>Géorgie</item>
        <item>Haïti</item>
        <item>Hongrie</item>
        <item>Japon</item>
        <item>Liban</item>
        <item>Luxembourg</item>
        <item>Maroc</item>
        <item>Mexique</item>
        <item>Pays-Bas</item>
        <item>Pérou</item>
        <item>Pologne</item>
        <item>République tchèque</item>
        <item>Russie</item>
        <item>Sénégal</item>
        <item>Suisse</item>
        <item>Taïwan</item>
        <item>Togo</item>
        <item>Thaïlande</item>
        <item>Tunisie</item>

        <!-- EUROPE -->
        <item>Albanie</item>
        <item>Andorre</item>
        <item>Arménie</item>
        <item>Autriche</item>
        <item>Azerbaïdjan</item>
        <item>Biélorussie</item>
        <item>Bosnie-Herzégovine</item>
        <item>Bulgarie</item>
        <item>Chypre</item>
        <item>Croatie</item>
        <item>Danemark</item>
        <item>Estonie</item>
        <item>Grèce</item>
        <item>Irlande</item>
        <item>Islande</item>
        <item>Italie</item>
        <item>Lettonie</item>
        <item>Liechtenstein</item>
        <item>Lituanie</item>
        <item>République de Macédoine</item>
        <item>Malte</item>
        <item>Moldavie</item>
        <item>Monaco</item>
        <item>Monténégro</item>
        <item>Norvège</item>
        <item>Portugal</item>
        <item>Roumanie</item>
        <item>Royaume-Uni</item>
        <item>Saint-Marin</item>
        <item>Serbie</item>
        <item>Slovaquie</item>
        <item>Slovénie</item>
        <item>Suède</item>
        <item>Ukraine</item>
        <item>Vatican</item>

        <!-- AMERIQUE -->
        <item>Antigua-et-Barbuda</item>
        <item>Bahamas</item>
        <item>Barbade</item>
        <item>Belize</item>
        <item>Costa Rica</item>
        <item>République dominicaine</item>
        <item>Dominique</item>
        <item>Equateur</item>
        <item>Grenade</item>
        <item>Guatemala</item>
        <item>Guyana </item>
        <item>Honduras</item>
        <item>Jamaïque</item>
        <item>Nicaragua</item>
        <item>Panama</item>
        <item>Paraguay</item>
        <item>Porto Rico</item>
        <item>Saint-Christophe-et-Niévès</item>
        <item>Sainte-Lucie</item>
        <item>Saint-Vincent-et-les Grenadines</item>
        <item>Salvador</item>
        <item>Suriname</item>
        <item>Trinité-et-Tobago</item>
        <item>Uruguay</item>
        <item>Venezuela</item>

        <!-- AFRIQUE -->
        <item>Afrique du Sud</item>

        <item>Angola</item>
        <item>Bénin</item>
        <item>Botswana</item>
        <item>Burkina</item>
        <item>Burundi</item>
        <item>Cameroun</item>
        <item>Cap-Vert</item>
        <item>République centrafricaine</item>
        <item>Comores</item>
        <item>Congo</item>
        <item>République démocratique du Congo</item>
        <item>Djibouti</item>
        <item>Égypte</item>
        <item>Érythrée</item>
        <item>Éthiopie</item>
        <item>Gabon</item>
        <item>Gambie</item>
        <item>Ghana</item>
        <item>Guinée</item>
        <item>Guinée-Bissau</item>
        <item>Guinée équatoriale</item>
        <item>Kenya</item>
        <item>Lesotho</item>
        <item>Libéria</item>
        <item>Libye</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Mali</item>
        <item>Maurice</item>
        <item>Mauritanie</item>
        <item> Mozambique</item>
        <item>Namibie</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Ouganda</item>
        <item>Rwanda</item>
        <item>Sao Tomé-et-Principe</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Somalie</item>
        <item>Soudan</item>
        <item>Sud-Soudan</item>
        <item>Swaziland</item>
        <item>Tanzanie</item>
        <item>Tchad</item>
        <item>Zambie</item>
        <item>Zimbabwe</item>

        <!-- ASIE -->
        <item>Afghanistan</item>
        <item>Arabie saoudite</item>
        <item>Bahreïn</item>
        <item>Bangladesh</item>
        <item>Bhoutan</item>
        <item>Birmanie</item>
        <item>Brunei</item>
        <item>Cambodge</item>
        <item>Corée du Nord</item>
        <item>Corée du Sud</item>
        <item>Émirats arabes unis</item>
        <item>Inde</item>
        <item>Indonésie</item>
        <item>Irak</item>
        <item>Iran</item>
        <item>Israël</item>
        <item>Jordanie</item>
        <item>Kazakhstan</item>
        <item>Kirghizistan</item>
        <item>Koweït</item>
        <item>Laos</item>
        <item>Malaisie</item>
        <item>Maldives</item>
        <item>Mongolie</item>
        <item>Népal</item>
        <item>Oman</item>
        <item>Ouzbékistan</item>
        <item>Palestine</item>
        <item>Pakistan</item>
        <item>Philippines</item>
        <item>Qatar</item>
        <item>Singapour</item>
        <item>Sri Lanka</item>
        <item>Syrie</item>
        <item>Tadjikistan</item>
        <item>Timor oriental</item>
        <item>Turkménistan</item>
        <item>Turquie</item>
        <item>Viêt Nam</item>
        <item>Yémen</item>


        <!-- OCEANIE -->
        <item>Australie</item>
        <item>Fidji</item>
        <item>Kiribati</item>
        <item>Marshall</item>
        <item>Micronésie</item>
        <item>Nauru</item>
        <item>Nouvelle-Zélande</item>
        <item>Palaos</item>
        <item>Papouasie-Nouvelle-Guinée</item>
        <item>Salomon</item>
        <item>Samoa</item>
        <item>Tonga</item>
        <item>Tuvalu</item>
        <item>Vanuatu</item>

    </string-array>
</resources>
