<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".Home_screen"
    android:background="@color/beige">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/publier_annonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publier_annonce"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/buttons_form"/>

        <Button
            android:id="@+id/all_annonces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceder_aux_annonces"
            android:layout_marginBottom="60dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/buttons_form"/>


        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deconnecter"
            android:textSize="10sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons_form2"/>

    </LinearLayout>

</LinearLayout>
